--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   min-height: 100vh;
   display: grid;
   grid-template-columns: .1fr 1fr;
-  grid-template-rows: 200px auto 100px;
+  grid-template-rows: 150px auto 100px;
   grid-template-areas: 
   'header header'
   'nav main'
@@ -77,7 +77,7 @@ body {
 .img_card__container {
   grid-area: main;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px,1fr))
+  grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
   grid-auto-rows: 350px;
   grid-gap: 50px;
   margin: 50px 24px;
@@ -95,6 +95,7 @@ body {
 }
 
 .footer {
+  grid-area: footer;
   display: grid;
   align-items: center;
   justify-items: center;
@@ -110,24 +111,24 @@ body {
     'header'
     'nav'
     'main'
-    'footer footer';
+    'footer';
     grid-template-columns: 1fr;
-    grid-template-rows: 100px auto auto 100px;
-    grid-auto-rows: 350px;
+    grid-template-rows: 90px auto auto 90px;
   }
 
   .img_card__container {
     margin: 0 auto;
     width: 99%;
     display: grid;
-    grid-gap: 30px;
+    grid-gap: 60px 0;
   }
 
   .nav__container {
-    width: 80vw;
+    width: 90vw;
     min-width: 300px;
     margin: 50px auto;
     grid-template-columns: repeat(4, 1fr);
+
   }
   .nav__link, .nav__link--active {
     text-decoration: underline;
